<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/saff_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pais"
            app:srcCompat="@drawable/saff_logo"
            tools:srcCompat="@drawable/saff_logo" />

        <Button
            android:id="@+id/btn_escalacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/escalacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saff_logo" />

        <TextView
            android:id="@+id/pais"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/nome_pais"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bandeira_da_arabia_saudita"
            android:layout_width="60dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/pais"
            app:layout_constraintRight_toLeftOf="@id/pais"
            app:layout_constraintTop_toTopOf="@id/pais"
            app:layout_constraintVertical_bias="0.6"
            app:srcCompat="@drawable/bandeira_arabia_saudita" />

        <GridLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pais"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:columnCount="1"
            android:rowCount="5"
            app:layout_constraintTop_toBottomOf="@id/btn_escalacao"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginBottom="30dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bandeira_arabia_saudita"
                        android:layout_width="56dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="32dp"
                        android:padding="4dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bandeira_arabia_saudita"
                        tools:srcCompat="@drawable/bandeira_arabia_saudita"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/jogo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:padding="4dp"
                            android:text="@string/jogo"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/placarJogo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/placar_jogo"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/bandeira_argentina"
                        android:layout_width="56dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="32dp"
                        android:padding="4dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bandeira_argentina"
                        tools:srcCompat="@drawable/bandeira_argentina"
                        tools:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginBottom="30dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bandeira_arabia_saudita1"
                        android:layout_width="56dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="32dp"
                        android:padding="4dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bandeira_arabia_saudita"
                        tools:srcCompat="@drawable/bandeira_arabia_saudita"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/jogo1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:padding="4dp"
                            android:text="@string/jogo1"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/placarJogo1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/placar_jogo1"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/bandeira_polonia"
                        android:layout_width="56dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="32dp"
                        android:padding="4dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bandeira_polonia"
                        tools:srcCompat="@drawable/bandeira_polonia"
                        tools:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginBottom="30dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bandeira_arabia_saudita2"
                        android:layout_width="56dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="32dp"
                        android:padding="4dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bandeira_arabia_saudita"
                        tools:srcCompat="@drawable/bandeira_arabia_saudita"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/jogo2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:padding="4dp"
                            android:text="@string/jogo2"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/placarJogo2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/placar_jogo2"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/bandeira_mexico"
                        android:layout_width="56dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="32dp"
                        android:padding="4dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bandeira_mexico"
                        tools:srcCompat="@drawable/bandeira_mexico"
                        tools:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>